--- a/MyExcercise/Result/Result.csproj
+++ b/MyExcercise/Result/Result.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8346C77A-9E1E-4883-B024-1DF8BC4E626F}</ProjectGuid>
+    <ProjectGuid>{AD70B9BA-9970-4754-8C22-D8EE2935CCF6}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Asynic</RootNamespace>
-    <AssemblyName>Asynic</AssemblyName>
+    <RootNamespace>Result</RootNamespace>
+    <AssemblyName>Result</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,12 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Asynic\Office\1.Asynic_Office.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Asynic\Office\2.Asynic_Model.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
