--- a/MyExcercise/Result/Result.csproj
+++ b/MyExcercise/Result/Result.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncInAsync.cs" />
+    <Compile Include="AsyncInSync.cs" />
+    <Compile Include="AsyncReturnValue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
