--- a/MyExcercise/Result/Result.csproj
+++ b/MyExcercise/Result/Result.csproj
@@ -53,5 +53,8 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ReadMe.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
