--- a/MyExcercise/wpf1/wpf1.csproj
+++ b/MyExcercise/wpf1/wpf1.csproj
@@ -56,6 +56,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="WhenAllView.xaml.cs">
+      <DependentUpon>WhenAllView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows1.xaml.cs">
       <DependentUpon>Windows1.xaml</DependentUpon>
     </Compile>
@@ -71,6 +74,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="WhenAllView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
